# openai-data-loss-prevention

./: .gitignore  .project.yaml  Cargo.toml  Makefile  README.md  licence.md
.cargo/: config.toml
definition/: gcl.yaml
playground/: docker-compose.yaml
playground/config/: api.yaml  logging.yaml
playground/config/custom-policies/: note.txt
src/: lib.rs
tests/: common.rs  requests.rs
tests/common/: note.txt
tests/requests/hello/: api.yaml
