# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "openai_data_loss_prevention"
version = "1.0.10"
rust-version = "1.74.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "adfa825c-fc0d-4ba3-a5ba-ab35a7194a39"
definition_asset_id = "openai-data-loss-prevention"
implementation_asset_id = "openai-data-loss-prevention-flex"

[dependencies]
pdk = { version = "1.0.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.0.0", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
